--- a/src/components/App/index.html
+++ b/src/components/App/index.html
@@ -1,5 +1,6 @@
-<h1>Welcome To <em>{{ path | parsePath }}</em></h1>
+<h1>{{ title }} <em>{{ path | parsePath }}</em></h1>
 <nav>
+  <a class="nav-home" v-link="{ path: '/' }">Home</a>
   <a class="nav-hello" v-link="{ path: '/hello' }">Hello</a>
   <a class="nav-bye" v-link="{ path: '/bye' }">Bye</a>
 </nav>
