--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,7 +1,8 @@
 $baseColor: #39B881;
-$extColor1: #DA5961;
-$extColor2: #33495C;
-$fontWhite: #FFF;
-$fontRed: #F012BE;
-$fontYellow: #FF851B;
-$fontBlue: #0074D9;
+$colorWhite: #FFF;
+$colorRed: #F012BE;
+$colorYellow: #FF851B;
+$colorBlue: #0074D9;
+$colorRoman: #DA5961;
+$colorNova: #FCB738;
+$colorPurple: #8E7CB9;
